--- a/HACK-6-EmpowHER25.HTML
+++ b/HACK-6-EmpowHER25.HTML
@@ -599,18 +599,17 @@
         </li>
 
         <li class="step-item">
-          <span class="step-badge">Step 3</span>
-          <div class="step-text">
+        <span class="step-badge">Step 3</span>
+        <div class="step-text">
             <strong>Check in with Staff</strong> 
             <span style="opacity:.85;">[only for In-person events]</span>.
             <br>
-                [Not available for this event]
-            <br>
-            <a class="pill" href="#" target="_blank" rel="noopener noreferrer">
-              <i class="fas fa-id-badge"></i> Check-in Info 
+            <a class="pill is-disabled" aria-disabled="true" tabindex="-1">
+            <i class="fa-solid fa-id-badge" aria-hidden="true"></i> Not available for this event
             </a>
-          </div>
+        </div>
         </li>
+
 
         <li class="step-item">
           <span class="step-badge">Step 4</span>
