--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -617,7 +617,28 @@
         <section class="hero">
             <div class="container">
                 <h1>EmpowHer HackDay</h1>
-                <p>An in-person mini hackathon powered by Major League Hacking (MLH) and amazing MLH partners (like Google). MLH and Google want hackers to leverage the power of large language models to prototype and build awesome hacks faster than ever before!</p>
+<!-- Link row under title -->
+<p style="margin: .75rem 0 1.25rem;">
+  <a href="https://events.mlh.io/events/13014-empowher-hackday" target="_blank" rel="noopener noreferrer"
+     class="btn btn-primary pulse" style="display:inline-flex;align-items:center;gap:.5rem;">
+    <i class="fa-solid fa-up-right-from-square" aria-hidden="true"></i>
+    Register on MLH
+  </a>
+</p>
+
+<!-- MLH/Google in-person blurb -->
+<p class="hero-sub" style="font-size:1.15rem;max-width:900px;margin:0 auto 1.25rem;opacity:.95;">
+  An in-person mini hackathon powered by Google Developer Groups, Major League Hacking (MLH) and amazing MLH partners (like Google).
+  MLH and Google want hackers to leverage the power of large language models to prototype and build awesome hacks faster than ever before!
+</p>
+
+<!-- Inclusive theme blurb -->
+<p class="hero-sub" style="font-size:1.05rem;max-width:1000px;margin:0 auto 1.25rem;opacity:.95;">
+  Empowering students in technology through innovation, ethical AI, and blockchain solutions. Join us for a day of coding, collaboration, and creating positive change!.
+  <span aria-hidden="true">💪✨</span>
+  🌐 Open worldwide — all universities, all majors, and high school students (16+).
+  We especially encourage women and non-binary participants to join, and welcome allies from all backgrounds.
+</p>
                 
                 <div class="countdown">
                     <h3>Event Starts In:</h3>
@@ -641,21 +662,7 @@
                     </div>
                 </div>
 
-                <div class="hero-buttons">
-                    <a href="https://events.mlh.io/events/13014-empowher-hackday" target="_blank" class="btn btn-primary pulse">
-                        🚀 Register Now on MLH
-                    </a>
-                    <a href="#about" class="btn btn-secondary">Learn More</a>
-                    <a href="https://empowherhackdayfall2025-devpost.vercel.app/" target="_blank" class="btn btn-secondary">
-                        📝 Devpost Submission Portal
-                    </a>
-                    <a href="https://hacksatfiu-toolkit.vercel.app/" target="_blank" class="btn btn-secondary">
-                        📚 Hacker Guide
-                    </a>
-                    <a href="https://empowherhackdayfall2025-agenda.vercel.app/" target="_blank" class="btn btn-secondary">
-                        📅 Hack Agenda
-                    </a>
-                </div>
+
                 
                 <div class="calendar-buttons" style="margin-top: 2rem;">
                     <h3 style="color: white; margin-bottom: 1rem;">📅 Add to Calendar</h3>
@@ -673,6 +680,142 @@
                 </div>
             </div>
         </section>
+
+
+<section class="event-details" id="hackers">
+  <div class="container">
+    <h2 style="color:white;text-align:center;font-size:2rem;margin-bottom:1rem;">
+      <i class="fa-solid fa-user-graduate" aria-hidden="true"></i> Hacker – Student
+    </h2>
+
+    <p style="color:white;text-align:center;max-width:980px;margin:0 auto 1.25rem;opacity:.95;">
+      🌐 Open worldwide — all universities, all majors, and high school students (16+).
+      We <em>especially encourage</em> women and non-binary participants to join; <strong>all allies welcome.</strong>
+    </p>
+
+    <div style="background:rgba(255,255,255,.08);border:1px solid rgba(255,255,255,.2);border-radius:14px;padding:1.25rem;max-width:980px;margin:0 auto 1.25rem;">
+      <p style="color:white;margin:0;opacity:.95;">
+        <strong>Under-18 exception:</strong> If you’re under 18, you must have parent/guardian permission. For in-person activities, a parent/guardian must be present. For online sessions, a signed permission form is required.
+        &nbsp;<a href="#" style="color:#ffd700;text-decoration:underline;">View Under-18 Participation Policy</a>
+      </p>
+    </div>
+
+    <div class="details-grid" style="margin-top:1.25rem;">
+      <!-- Registration -->
+      <div class="detail-card" style="text-align:left;">
+        <div class="detail-icon">📝</div>
+        <h3>Registration</h3>
+        <ol style="margin-top:.5rem;padding-left:1.1rem;">
+          <li style="margin:.4rem 0;">
+            Register Now on <strong>MLH</strong> → go to the event page and click <em>Register</em>.
+            <div style="margin-top:.35rem;">
+              <a class="btn btn-secondary" href="https://events.mlh.io/events/13014-empowher-hackday" target="_blank" rel="noopener noreferrer"
+                 style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;">
+                <i class="fa-solid fa-up-right-from-square" aria-hidden="true"></i> Open EmpowHER HackDay MLH Page
+              </a>
+            </div>
+          </li>
+
+          <li style="margin:.4rem 0;">
+            [Get Started with Sponsored Participant Products (Subscriptions/Apis, etc.)] Register with <strong>OneStopForm</strong> → go to <strong>Hack University</strong> → <em>Hackathons</em> and complete the One Stop Form.
+            <div style="margin-top:.35rem;">
+              <a class="btn btn-secondary" href="https://hackuniversity.vercel.app/" target="_blank" rel="noopener noreferrer"
+                 style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;">
+                <i class="fa-solid fa-up-right-from-square" aria-hidden="true"></i> Open Hack University
+              </a>
+            </div>
+          </li>
+           <li style="margin:.4rem 0;">
+            Once Register at HackUniversity.vercel.app <strong>Claim Subscriptions/Apis, etc.</strong> 
+            <div style="margin-top:.35rem;">
+              <a class="btn btn-secondary" href="https://codecrunchglobal.vercel.app/HACK-6.1-EmpowHERhackDay25-claim.html" target="_blank" rel="noopener noreferrer"
+                 style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;">
+                <i class="fa-solid fa-up-right-from-square" aria-hidden="true"></i> Hack Participant Subscriptions/Apis
+              </a>
+            </div>
+          </li>
+          <li style="margin:.4rem 0;">
+            Get your ticket on the <strong>Bevy calendar</strong>.
+            <div style="margin-top:.35rem;">
+              <a class="btn btn-secondary" href="https://empowherhackdayfall2025-bevy.vercel.app/" target="_blank" rel="noopener noreferrer"
+                 style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;">
+                <i class="fa-solid fa-ticket" aria-hidden="true"></i> Open Bevy Calendar
+              </a>
+            </div>
+          </li>
+
+       <li style="margin:.4rem 0;">
+            <strong>Check in with Staff</strong> <span style="opacity:.85;">[only for In-person events]</span>.
+            <div style="margin-top:.35rem;">
+              <a class="btn btn-secondary" href="#" target="_blank" rel="noopener noreferrer"
+                 style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;pointer-events:none;opacity:.6;">
+                <i class="fa-solid fa-ticket" aria-hidden="true"></i> Qr Code for Check-in at the venue
+              </a>
+            </div>
+          </li>
+          <!-- <li style="margin:.4rem 0;">
+            <strong>Check in with Staff</strong> <span style="opacity:.85;">[only for In-person events]</span>.
+            <div style="margin-top:.35rem;">
+              <a class="btn btn-secondary" aria-disabled="true" tabindex="-1"
+                 style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;pointer-events:none;opacity:.6;">
+                <i class="fa-solid fa-id-badge" aria-hidden="true"></i> Not available for this event
+              </a>
+            </div>
+          </li> -->
+          <li style="margin:.4rem 0;">
+            Register on <strong>Devpost</strong> <span style="opacity:.85;">(Project Submission Portal)</span>.
+            <div style="margin-top:.35rem;">
+              <a class="btn btn-secondary" href="https://empowherhackdayfall2025-devpost.vercel.app/" target="_blank" rel="noopener noreferrer"
+                 style="padding:.4rem .8rem;border-radius:999px;font-size:.9rem;">
+                <i class="fa-solid fa-rocket" aria-hidden="true"></i> Open Devpost Portal
+              </a>
+            </div>
+          </li>
+        </ol>
+      </div>
+
+      <!-- Hack Resources -->
+      <div class="detail-card" style="text-align:left;">
+        <div class="detail-icon">📚</div>
+        <h3>Hack Resources</h3>
+        <ul style="margin-top:.5rem;padding-left:1.1rem;">
+          <li style="margin:.4rem 0;">
+            <strong>Hack Agenda:</strong>
+            <br>
+            <a href="https://empowherhack2025-agenda.vercel.app" target="_blank" rel="noopener noreferrer" style="color:#ffd700;text-decoration:underline;">
+              EmpowHER 2025 Agenda
+            </a>
+          </li>
+          <li style="margin:.4rem 0;">
+            <strong>Hack Guide:</strong>
+            <br>
+            <a href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener noreferrer" style="color:#ffd700;text-decoration:underline;">
+              Hacker Guide &amp; Toolkit
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <!-- Get Involved -->
+      <div class="detail-card" style="text-align:left;">
+        <div class="detail-icon">🌟</div>
+        <h3>Get Involved</h3>
+        <p style="margin:.5rem 0 1rem;opacity:.95;">
+          Join our hackathon community! Whether you're an industry professional, student volunteer, fundraiser, or sponsor, your support drives innovation and empowers the next generation of tech leaders.
+        </p>
+        <a href="https://hackuniversity.vercel.app/" target="_blank" rel="noopener noreferrer"
+           class="btn btn-primary" style="width:100%;max-width:320px;">
+          Get Involved – Learn More
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
 
         <section class="event-details" id="about">
             <div class="container">
@@ -747,11 +890,7 @@
                 <div class="mlh-logo">MLH Official</div>
                 <h2>Major League Hacking × Google Event</h2>
                 <p>EmpowHer HackDay is an official Major League Hacking (MLH) mini hackathon powered by Google. Join the largest community of student developers and leverage Google's AI tools to build incredible projects!</p>
-                <div style="margin-top: 2rem;">
-                    <a href="https://events.mlh.io/events/13014-empowher-hackday" target="_blank" class="btn btn-primary">
-                        Register on MLH Platform
-                    </a>
-                </div>
+
                 <p style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.8;">
                     By participating, you agree to the <a href="https://github.com/MLH/mlh-policies" style="color: #ffd700;">MLH Code of Conduct</a>
                 </p>
